Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30863

Server freeze, all threads in trx_assign_rseg_low

    XMLWordPrintable

Details

    Description

      origin/bb-10.6-MDEV-26055-MDEV-26827 78dd355afa70f1c1eb36d8ddd235d797a2d4cc96 2023-03-15T19:11:59+02:00 with some additional patch.
      Per Marko: The problem affects trees without his modifications too.
       
      Several sessions run a DDL/DML Mix.
      At some point of time the processlist looks like
       
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': Content of processlist ---------- end
      # 2023-03-15T10:20:52 [2723568] ERROR: Reporter 'Deadlock': 9 stalled queries detected, declaring deadlock at DSN dbi:mysql:host=127.0.0.1:port=25880:user=root:database=test:mysql_local_infile=1. Will exit with STATUS_SERVER_DEADLOCKED later.
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': Content of processlist ---------- begin
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': ID -- COMMAND -- TIME -- INFO -- state
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 17 -- Sleep -- 319 -- <undef> -- ok
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 18 -- Killed -- 205 -- INSERT INTO `table100_innodb_key_pk_parts_2_int_autoinc` ( `col_char_255_ucs2`, `col_set_ucs2`, `col_longtext_utf8` ) VALUES ( REPEAT( _UTF8 0x1E, 242 ), CONVERT( 'get' USING UTF8 ), CONVERT( 'back' USING UCS2 ) ) /* E_R Thread1 QNO 955 CON_ID 18 */ -- stalled?
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 19 -- Killed -- 205 -- UPDATE `table100_innodb_int_autoinc` SET `col_longtext_ucs2` = REPEAT( _ASCII 0x6258, 199 ) WHERE `col_enum_ucs2` BETWEEN CONVERT( 'uvztocbykajipcgbfcaijsbsqvfewnrawdyifzjdhxhpbuirpfxjypybjnzwchwpljdzmbbasnrmymaovoanpoongypdtrubpvdmyiyhtjllbntfuszqvmblzzcsvvywourkylxzoykajlulkirqwlsroznzobkmdreettzgtnvlekuuetinpd' USING ASCII ) AND REPEAT( _LATIN1 0xDE8E, 248 )  /* E_R Thread3 QNO 1004 CON_ID 19 */ -- stalled?
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 20 -- Killed -- 205 -- DELETE FROM `table100_innodb_key_pk_parts_2_int_autoinc` WHERE `col_longtext_utf8` IS NULL ORDER BY `pk` LIMIT 1 /* E_R Thread2 QNO 1017 CON_ID 20 */ -- stalled?
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 21 -- Killed -- 205 -- INSERT INTO `table100_innodb_key_pk_parts_2_int_autoinc` ( `col_longtext_utf8`, `col_longtext_ucs2`, `col_set_utf8` ) VALUES ( REPEAT( _UTF8 0x1C, 129 ), CONVERT( 'txgjhmvjmpwdfsmlslyyrxsrxkydumkbfpuhpwmtkeobmnfcdpmqnthfnqebbpzyaxpcueewdhfhefzbyhicxdkyhdsvontjfoosbyrzxnzogyjvialjaxfyzdswuhwnkevgpdxnlbwlnxtvtjhxuyxoddyocjoswfabdcqxxcuimbfgpbodlvcupyhsdmnjsdltadhwlaqkgyqukhwuohwotatvvbzljmmhibmmgikcrg' USING UCS2 ), CONVERT( 'xgjhmvjmpwdfsmlslyyrxsrxkydumkbfpuhpwmtkeobmnfcd' USING LATIN1 ) ) /* E_R Thread5 QNO 1028 CON_ID 21 */ -- stalled?
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 22 -- Killed -- 205 -- UPDATE `table100_innodb_key_pk_parts_2_int_autoinc` SET `col_varchar_255_ucs2_key` = REPEAT( _LATIN1 0x29D1, 207 ) WHERE `col_enum_utf8` IS NOT NULL ORDER BY `pk` LIMIT 5 /* E_R Thread4 QNO 927 CON_ID 22 */ -- stalled?
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 23 -- Killed -- 205 -- UPDATE `table100_innodb_int_autoinc` SET `col_varchar_255_utf8_key` = REPEAT( _LATIN1 0x1591, 66 ) WHERE `col_set_utf8_key` BETWEEN CONVERT( 'mjvxogltyqjvrnpnglicoskkieckxstgobkmxfgzaqetvu' USING LATIN1 ) AND REPEAT( _LATIN1 0x2, 217 )  /* E_R Thread7 QNO 1021 CON_ID 23 */ -- stalled?
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 24 -- Killed -- 205 -- UPDATE `table100_innodb_key_pk_parts_2_int_autoinc` SET `col_varchar_255_utf8` = CONVERT( 'omdflvtldhz' USING UTF8 ) WHERE `col_enum_ucs2_key` IS NOT NULL ORDER BY `pk` LIMIT 2 /* E_R Thread6 QNO 1031 CON_ID 24 */ -- stalled?
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 25 -- Killed -- 205 -- UPDATE `table100_innodb_key_pk_parts_2_int_autoinc` SET `col_set_ucs2` = REPEAT( _UTF8 0xC, 46 ) WHERE `col_enum_ucs2` LIKE CONCAT( REPEAT( _UCS2 0xA, 240 ), '%' )  /* E_R Thread8 QNO 1014 CON_ID 25 */ -- stalled?
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 26 -- Killed -- 205 -- INSERT INTO `table100_innodb_key_pk_parts_2_int_autoinc` ( `col_set_utf8`, `col_enum_utf8_key`, `col_char_255_utf8` ) VALUES ( REPEAT( _ASCII 0xC716, 24 ), REPEAT( _UCS2 0x646, 140 ), CONVERT( 'hxtyhogddlxobyaqntcyfqauvgivvxqlpbtlxckexcugzcshsqdbbhkgppazqpbvzyttzisdtmmpciojsnfvjrglfwpcjvgleziycgrdkn' USING UTF8 ) ) /* E_R Thread9 QNO 969 CON_ID 26 */ -- stalled?
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': 37 -- Query -- 0 -- SHOW FULL PROCESSLIST -- ok
      # 2023-03-15T10:20:52 [2723568] Reporter 'Deadlock': Content of processlist ---------- end
       
       
      RQG
      ===
      # git clone https://github.com/mleich1/rqg --branch <pick the right branch> RQG
      #
      # GIT_SHOW: HEAD -> master, origin/master, origin/HEAD 0c14239e5cb9f295f4571da4bc282e948ed79733 2023-03-13T14:23:42+01:00
      # rqg.pl  : Version 4.2.1 (2022-12)
      #
      # $RQG_HOME/rqg.pl \
      # --grammar=conf/engines/many_indexes.yy \
      # --gendata=conf/engines/many_indexes.zz \
      # --reporters=Mariabackup_linux \
      # --mysqld=--loose-innodb-log-file-size=150M \
      # --mysqld=--loose-innodb_lock_schedule_algorithm=fcfs \
      # --mysqld=--loose-idle_write_transaction_timeout=0 \
      # --mysqld=--loose-idle_transaction_timeout=0 \
      # --mysqld=--loose-idle_readonly_transaction_timeout=0 \
      # --mysqld=--connect_timeout=60 \
      # --mysqld=--interactive_timeout=28800 \
      # --mysqld=--slave_net_timeout=60 \
      # --mysqld=--net_read_timeout=30 \
      # --mysqld=--net_write_timeout=60 \
      # --mysqld=--loose-table_lock_wait_timeout=50 \
      # --mysqld=--wait_timeout=28800 \
      # --mysqld=--lock-wait-timeout=86400 \
      # --mysqld=--innodb-lock-wait-timeout=50 \
      # --no_mask \
      # --queries=10000000 \
      # --seed=random \
      # --reporters=Backtrace \
      # --reporters=ErrorLog \
      # --reporters=Deadlock \
      # --validators=None \
      # --mysqld=--log_output=none \
      # --mysqld=--log_bin_trust_function_creators=1 \
      # --mysqld=--loose-debug_assert_on_not_freed_memory=0 \
      # --engine=InnoDB \
      # --restart_timeout=240 \
      # --mysqld=--plugin-load-add=file_key_management.so \
      # --mysqld=--loose-file-key-management-filename=$RQG_HOME/conf/mariadb/encryption_keys.txt \
      # --mysqld=--plugin-load-add=provider_lzo.so \
      # --mysqld=--plugin-load-add=provider_bzip2.so \
      # --mysqld=--plugin-load-add=provider_lzma.so \
      # --mysqld=--plugin-load-add=provider_snappy.so \
      # --mysqld=--plugin-load-add=provider_lz4.so \
      # --mysqld=--loose-innodb_compression_level=1 \
      # --duration=300 \
      # --mysqld=--loose-innodb_fatal_semaphore_wait_threshold=300 \
      # --mysqld=--loose-innodb_read_only_compressed=OFF \
      # --mysqld=--innodb_stats_persistent=off \
      # --mysqld=--innodb_adaptive_hash_index=off \
      # --mysqld=--loose-innodb_evict_tables_on_commit_debug=on \
      # --mysqld=--loose-max-statement-time=30 \
      # --threads=9 \
      # --mysqld=--innodb_use_native_aio=1 \
      # --mysqld=--innodb_undo_log_truncate=ON \
      # --mysqld=--loose_innodb_change_buffering=purges \
      # --mysqld=--innodb_undo_tablespaces=3 \
      # --mysqld=--innodb_rollback_on_timeout=OFF \
      # --mysqld=--innodb_page_size=4K \
      # --mysqld=--innodb-buffer-pool-size=256M \
      # <local settings>
       
      sdp:/data1/results/1678900131/Freeze1
      gdb -c ./1/data/core.2703112 /data/Server_bin/bb-10.6-MDEV-26055-MDEV-26827A_RelWithDebInfo/bin/mysqld
      
      

      Attachments

        1. TBR-1872.cfg
          44 kB
          Matthias Leich
        2. TBR-1872.yy
          1.0 kB
          Matthias Leich
        3. TBR-1872.zz
          0.2 kB
          Matthias Leich

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              mleich Matthias Leich
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: